--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">PhotoImageFilter</string>
+    <string name="save_images">Save Images</string>
+    <string name="edit_images">Edit Images</string>
+    <string name="crate_new">Crate new</string>
+    <string name="image_filter">Image Filter</string>
 </resources>
