EditImageActivity & item_contaiter_filter Ui

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="edit_images">Edit Images</string>
     <string name="crate_new">Crate new</string>
     <string name="image_filter">Image Filter</string>
+    <string name="filter_1">Filter 1</string>
 </resources>
