--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="crate_new">Crate new</string>
     <string name="image_filter">Image Filter</string>
     <string name="filter_1">Filter 1</string>
+    <string name="saved_images">Saved Images</string>
 </resources>
